Increase LVM for homeVol on Github runner

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -16,7 +16,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          echo
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 021891599381.dkr.ecr.us-east-1.amazonaws.com
+          docker build -t 021891599381.dkr.ecr.us-east-1.amazonaws.com/roboshop-cart:${{ github.sha }} .
+          docker push 021891599381.dkr.ecr.us-east-1.amazonaws.com/roboshop-cart:${{ github.sha }}
 
   DEV:
     runs-on: self-hosted
