--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -1,6 +1,10 @@
 name: Main Branch Pipeline
 on:
   workflow_call:
+    inputs:
+      componentName:
+        required: true
+        type: string
 run-name: ${{ github.sha }} | ${{ github.event.head_commit.message }}
 jobs:
   UNIT-TESTS:
@@ -17,8 +21,8 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 021891599381.dkr.ecr.us-east-1.amazonaws.com
-          docker build -t 021891599381.dkr.ecr.us-east-1.amazonaws.com/roboshop-cart:${{ github.sha }} .
-          docker push 021891599381.dkr.ecr.us-east-1.amazonaws.com/roboshop-cart:${{ github.sha }}
+          docker build -t 021891599381.dkr.ecr.us-east-1.amazonaws.com/roboshop-${{ inputs.componentName }}:${{ github.sha }} .
+          docker push 021891599381.dkr.ecr.us-east-1.amazonaws.com/roboshop-${{ inputs.componentName }}:${{ github.sha }}
 
   DEV:
     runs-on: self-hosted
