--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -30,9 +30,17 @@ jobs:
     environment: DEV
     steps:
       - uses: actions/checkout@v4
+        name: Checkout Code
       - run: |
-          echo
-
+          aws eks update-kubeconfig --name dev-eks
+          LB=$(kubectl get svc argocd-server -n argocd --output json | jq '.status.loadBalancer.ingress[0].hostname'| sed -e 's/"//g')
+          PASS=$(kubectl get secrets argocd-initial-admin-secret -n argocd --template={{.data.password}} | base64 -d)
+          argocd login $LB --username admin --password $PASS --insecure
+        name: ArgoCD login
+      - run: |
+          argocd app create ${{ inputs.componentName }} --repo https://github.com/tejadevsecops/roboshop-helm.git --path . --dest-namespace default --dest-server https://kubernetes.default.svc --values env-dev/${{ inputs.componentName }}.yaml
+          argocd app sync ${{ inputs.componentName }}
+        name: ArgoCD App create and sync
   QA:
     runs-on: self-hosted
     needs: DEV
