Nginx ingress controller changes for ArgoCD

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -33,9 +33,8 @@ jobs:
         name: Checkout Code
       - run: |
           aws eks update-kubeconfig --name dev-eks
-          LB=$(kubectl get svc argocd-server -n argocd --output json | jq '.status.loadBalancer.ingress[0].hostname'| sed -e 's/"//g')
           PASS=$(kubectl get secrets argocd-initial-admin-secret -n argocd --template={{.data.password}} | base64 -d)
-          argocd login $LB --username admin --password $PASS --insecure
+          argocd login argocd-dev.tejadevopsb81.icu --username admin --password $PASS --insecure --skip-test-tls --grpc-web
         name: ArgoCD login
       - run: |
           argocd app create ${{ inputs.componentName }} --repo https://github.com/tejadevsecops/roboshop-helm.git --path . --dest-namespace default --dest-server https://kubernetes.default.svc --values env-dev/${{ inputs.componentName }}.yaml --helm-set COMMIT_ID=${{ github.sha }} --upsert
