--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -5,6 +5,9 @@ on:
       componentName:
         required: true
         type: string
+      SONAR_CLASS_PATH:
+        required: true
+        type: string
     secrets:
       VAULT_TOKEN:
         required: true
@@ -33,7 +36,7 @@ jobs:
             infra-secrets/data/sonarqube username | sonar_user ;
             infra-secrets/data/sonarqube password | sonar_pass ;
       - name: Code Quality Checks
-        run: /sonar-scanner/sonar-scanner-6.1.0.4477-linux-x64/bin/sonar-scanner -Dsonar.host.url=http://sonarqube-internal.tejadevopsb81.icu:9000 -Dsonar.login=${{ steps.sonarqube.outputs.sonar_user }} -Dsonar.password=${{ steps.sonarqube.outputs.sonar_pass }} -Dsonar.qualitygate.wait=true -Dsonar.projectKey=${{ inputs.componentName }}
+        run: /sonar-scanner/sonar-scanner-6.1.0.4477-linux-x64/bin/sonar-scanner -Dsonar.host.url=http://sonarqube-internal.tejadevopsb81.icu:9000 -Dsonar.login=${{ steps.sonarqube.outputs.sonar_user }} -Dsonar.password=${{ steps.sonarqube.outputs.sonar_pass }} -Dsonar.qualitygate.wait=true -Dsonar.projectKey=${{ inputs.componentName }} ${{ inputs.SONAR_CLASS_PATH }}
       - name: SAST Scan
         run: echo SAST Scan
       - name: SCA Check
